<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_weight="2">


        <!--Google Map-->
        <fragment
            android:id="@+id/fmMap"
            android:layout_width="match_parent"
            android:layout_height="405dp"
            class="com.google.android.gms.maps.SupportMapFragment" />


        <!--Searchbox and Button(Left and right)-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="5dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etLocationName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="false"
                android:layout_toLeftOf="@+id/btSubmit"
                android:hint="@string/hint_etLocationName" />

            <Button
                android:id="@+id/btSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="onLocationNameClick"
                android:text="@string/btSubmit" />


        </RelativeLayout>

        <EditText
            android:id="@+id/etvideoTagInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/videoTagInfo"
            android:layout_gravity="center_horizontal|bottom" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:layout_weight="6">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etvideoDatetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/videoDatetime"

                />

            <EditText
                android:id="@+id/etvideoURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/videoURL"/>

            <Button
                android:id="@+id/btPin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0B6121"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:onClick="onPinClick"
                android:text="@string/send"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_marginBottom="10dp"
                android:layout_alignParentTop="true" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
