<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.opengate.lesson_map.ViewList"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_sel_loc"
        android:id="@+id/txt_sel_loc"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:id="@+id/spn_loc"
        android:entries="@array/loc_list"
        android:spinnerMode="dialog"
        android:prompt="@string/spn_loc_list_prompt"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_watch"
        android:id="@+id/btn_watch"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
